--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <main>
 
 
-        <section class="box-produto" itemscope itemtype="http://schema.org/Product">
+        <section class="box-produto ch-box-container" itemscope itemtype="http://schema.org/Product">
             <header >
                 <h1 itemprop="name">Ipad Mini Apple 16 Gb Wifi Led 7.9</h1>
             </header>
@@ -55,9 +55,20 @@
                   </div>
               </div>
 
+              <!-- Galeria -->
               <div class="galeria">
-                Mais produtos
+                <div class="demo-carousel ch-carousel">
+                  <ul>
+                      <li><img src="http://placehold.it/60x60"></li>
+                      <li><img src="http://placehold.it/60x60"></li>
+                      <li><img src="http://placehold.it/60x60"></li>
+                      <li><img src="http://placehold.it/60x60"></li>
+                      <li><img src="http://placehold.it/60x60"></li>
+                      <li><img src="http://placehold.it/60x60"></li>
+                  </ul>
+                </div>
               </div>
+              <!-- /Galeria -->
             </aside>  
 
 
