base css + teste font

--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
 
       <script src="https://ui.mlstatic.com/chico/tiny/0.2.3/tiny.min.js"></script>
       <script src="assets/vendor/chico/ui/chico.min.js"></script>
+      <script type="assets/js/script.min.js"></script>
   </body>
 </html>
