--- a/index.html
+++ b/index.html
@@ -32,32 +32,44 @@
                     <strong itemprop="price">$ 4799 <span>99</span></strong>
                   </div>
 
-                  <div class="quantidade">
-                    <label for="field-quantidade">Quantity</label> 
-                    <select id="field-quantidade">
-                      <option value="1">1</option>
-                      <option value="1">2</option>
-                      <option value="1">3</option>
-                    </select>
-                  </div>
+                  <!-- Form -->
+                  <form action="" class="ch-form" method="POST">
+                    <!-- Input Quantidade -->
+                    <div class="quantidade ch-form-row">
+                      <label for="field-quantidade">Quantity</label> 
+                      <select id="field-quantidade">
+                        <option value="1">1</option>
+                        <option value="1">2</option>
+                        <option value="1">3</option>
+                      </select>
+                    </div>
+                    <!-- /Input Quantidade -->
 
-                  <div class="parcelas">
-                    <label for="field-parcelas">Payment</label> 
-                    <select id="field-parcelas">
-                      <option value="1">1</option>
-                      <option value="1">2</option>
-                      <option value="1">3</option>
-                    </select>
-                  </div>
+                    <!-- Input Parcelas -->
+                    <div class="parcelas ch-form-row">
+                      <label for="field-parcelas">Payment</label> 
+                      <select id="field-parcelas">
+                        <option value="1">1</option>
+                        <option value="1">2</option>
+                        <option value="1">3</option>
+                      </select>
+                    </div>
+                    <!-- Input Parcelas -->
 
-                  <div class="comprar">
-                      <button type="button" class="ch-btn ch-btn-large">Buy</button>
-                  </div>
+                    <div class="comprar">
+                        <button type="button" class="ch-btn ch-btn-large">Buy</button>
+                        <span class="observacao">MercadoLibre ins't the owner of this product</span>
+                    </div>
+                  </form>
+                  <!-- Form -->
               </div>
 
               <!-- Galeria -->
               <div class="galeria">
-                <div class="demo-carousel ch-carousel">
+                <header>
+                  <h2>More products like this</h2>
+                </header>
+                <div class="carousel-ul ch-carousel">
                   <ul>
                       <li><img src="http://placehold.it/60x60"></li>
                       <li><img src="http://placehold.it/60x60"></li>
@@ -71,15 +83,28 @@
               <!-- /Galeria -->
             </aside>  
 
-
+            <hr />
 
             <footer>
-                <nav>
-                    <ul>
-                      <li><a href="#">Product Description</a></li>
-                      <li><a href="#">Questions</a></li>
-                    </ul>
-                </nav>
+                
+                <!-- Tabs Questions -->
+                <div class="questoes-tabs ch-tabs">
+                  <ul class="ch-tabs-triggers">
+                      <li><a href="#tab1-a" class="ch-tab">Product Description</a></li>
+                      <li><a href="#tab1-b" class="ch-tab">Questions</a></li>
+                  </ul>
+                  <div class="ch-box-lite">
+                      <div id="tab1-a" class="tab-content">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed ullamcorper ipsum, sit amet pharetra nisl. Aliquam nisl ex, facilisis et pharetra quis, suscipit et orci. Nulla nisi leo, pretium vel libero feugiat, feugiat accumsan lectus. Praesent euismod urna sit amet est feugiat tincidunt. Vivamus sodales tempor neque, nec efficitur orci semper quis. Curabitur ornare neque id dolor dignissim, ac dictum neque tincidunt. Praesent efficitur feugiat mi. Nulla at felis id sapien finibus sollicitudin. Mauris dolor metus, viverra eget egestas a, aliquet non purus. Sed aliquet sem sed dictum laoreet.</p>
+                      </div>
+
+                      <div id="tab1-b" class="tab-content">
+                          <p>....</p>
+                      </div>
+
+                    </div>
+                </div>
+                <!-- Tabs Questions -->
 
             </footer>   
 
@@ -90,6 +115,6 @@
 
       <script src="https://ui.mlstatic.com/chico/tiny/0.2.3/tiny.min.js"></script>
       <script src="assets/vendor/chico/ui/chico.min.js"></script>
-      <script type="assets/js/script.min.js"></script>
+      <script src="assets/js/src/script.js"></script>
   </body>
 </html>
