fix order input hidden

--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
                 
                 <!-- Tabs Questions -->
                 <div class="questoes-tabs ch-tabs">
+                  <input id="tab-1" type="radio" name="tab-group" checked="checked" />
+                  <input id="tab-2" type="radio" name="tab-group"/>
                   <ul class="ch-tabs-triggers">
                       <li>
-                        <input id="tab-1" type="radio" name="tab-group" checked="checked" />
                         <label for="tab-1" class="ch-tab">Product Description</label>
                       </li>
                       <li>
-                        <input id="tab-2" type="radio" name="tab-group"/>
                         <label for="tab-2" class="ch-tab">Questions</label>
                       </li>
                   </ul>
-                  <div class="ch-box-lite">
+                  <div id="content" class="ch-box-lite">
                       <div id="content-tab1" class="tab-content">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed ullamcorper ipsum, sit amet pharetra nisl. Aliquam nisl ex, facilisis et pharetra quis, suscipit et orci. Nulla nisi leo, pretium vel libero feugiat, feugiat accumsan lectus. Praesent euismod urna sit amet est feugiat tincidunt. Vivamus sodales tempor neque, nec efficitur orci semper quis. Curabitur ornare neque id dolor dignissim, ac dictum neque tincidunt. Praesent efficitur feugiat mi. Nulla at felis id sapien finibus sollicitudin. Mauris dolor metus, viverra eget egestas a, aliquet non purus. Sed aliquet sem sed dictum laoreet.</p>
                       </div>
