add color que faltava na dd/dl

--- a/index.html
+++ b/index.html
@@ -104,8 +104,21 @@
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed ullamcorper ipsum, sit amet pharetra nisl. Aliquam nisl ex, facilisis et pharetra quis, suscipit et orci. Nulla nisi leo, pretium vel libero feugiat, feugiat accumsan lectus. Praesent euismod urna sit amet est feugiat tincidunt. Vivamus sodales tempor neque, nec efficitur orci semper quis. Curabitur ornare neque id dolor dignissim, ac dictum neque tincidunt. Praesent efficitur feugiat mi. Nulla at felis id sapien finibus sollicitudin. Mauris dolor metus, viverra eget egestas a, aliquet non purus. Sed aliquet sem sed dictum laoreet.</p>
                       </div>
 
-                      <div id="content-tab2" class="tab-content">
-                          <p>....</p>
+                      <div id="content-tab2" class="tab-content opnioes">
+                          <!-- Definition list -->
+                          <dl class="ch-list">
+                              <dt>MercadoLibre</dt>
+                              <dd>Donde compras y vendes de todo!</dd>
+                              
+                              <dt>MercadoLibre</dt>
+                              <dd>Donde compras y vendes de todo!</dd>
+
+                              <dt>MercadoLibre</dt>
+                              <dd>Donde compras y vendes de todo!</dd>
+                              
+                              <dt>MercadoLibre</dt>
+                              <dd>Donde compras y vendes de todo!</dd>
+                          </dl>
                       </div>
 
                     </div>
